<resources>
    <string name="app_name" translatable="true">智慧社区</string>
    <string name="app_title">吐鲁番阳光园智慧社区</string>
    <string name="bottom_title_index">首页</string>
    <string name="bottom_title_life">生活</string>
    <string name="bottom_title_community">社区</string>
    <string name="bottom_title_me">我</string>
    <string name="tab_title_life_zhengwu">政务</string>
    <string name="tab_title_life_wuye">物业</string>
    <string name="tab_title_life_minsheng">民生</string>
    <string name="tab_title_wuye_all">全部</string>
    <string name="tab_title_wuye_gonggao">社区公告</string>
    <string name="tab_title_wuye_kuaixun">社区快讯</string>
    <string name="txt_my_order">我的订单</string>
    <string name="txt_my_collect">我的收藏</string>
    <string name="txt_chat">即时聊天</string>
    <string name="txt_my_topic">我的帖子</string>
    <string name="txt_repair_record">报修记录</string>
    <string name="txt_family_info">家庭信息</string>
    <string name="txt_shop_manage">商铺管理</string>
    <string name="txt_apply_shop">申请店铺</string>
    <string name="txt_minsheng_apply_shop">+申请开店</string>
    <string name="txt_my_repair_order">我的维修单</string>
    <string name="txt_system_message">系统消息</string>
    <string name="toast_menu_setting">设置</string>
    <string name="title_wenjuan">问卷</string>
    <string name="txt_wenjuan">问卷调查</string>
    <string name="txt_submit">提交</string>
    <string name="txt_know">我知道了</string>
    <string name="txt_phone">手机号</string>
    <string name="txt_work_time">工作时间:</string>
    <string name="txt_hot_line">政府热线</string>
    <string name="lianxishangjia">联系商家</string>
    <string name="tab_title_minsheng_nearby">社区商圈</string>
    <string name="tab_title_minsheng_bbs">社区论坛</string>
    <string name="txt_name">姓名</string>
    <string name="txt_title">标题</string>
    <string name="txt_suggestion">意见</string>
    <string name="txt_hint_suggestion">请输入您的意见</string>
    <string name="txt_hint_detail">请输入详细</string>
    <string name="txt_call">呼叫</string>
    <string name="txt_collect">收藏</string>
    <string name="txt_share">分享</string>
    <string name="title_topic_detail">正文</string>
    <string name="txt_choise">请选择</string>
    <string name="txt_theme">主题</string>
    <string name="txt_depart">部门</string>
    <string name="txt_choise_depart">选择部门</string>
    <string name="txt_choise_theme">选择主题</string>
    <string name="title_masses_guide">办事指南</string>
    <string name="title_communication_notice">社区公告</string>
    <string name="txt_shop_status">商家休息，停止接单</string>
    <string name="txt_shop_more">更多</string>
    <string name="txt_shop_settlement">去结算</string>
    <string name="txt_navigation">导航</string>
    <string name="txt_merchant_buy">购买</string>
    <string name="txt_merchant_pay">支付</string>
    <string name="txt_merchant_heji">合计: </string>
    <string name="txt_merchant_clear_all">清空全部</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="forget_phone_hint">请您输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_username_hint">请您输入用户名</string>
    <string name="login_idcard_no_hint">请您输入身份证号</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_register">注册</string>
    <string name="login_remeber_pwd">&#160;记住密码</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login_guest">游客方式登录</string>
    <string name="login_other">快速登录</string>
    <string name="login_no_account">没有账号?去注册</string>
    <string name="login_username">用户名</string>
    <string name="login_idcard_no">身份证号</string>
    <string name="login_choise_disc">选择小区</string>
    <string name="register_username_hint">请您输入真实姓名</string>
    <string name="register_phone_hint">请您输入手机号</string>
    <string name="register_code_hint">请您输入验证码</string>
    <string name="register_password_hint">输入6&#8211;16位新密码</string>
    <string name="register_tips">点击注册即表示同意</string>
    <string name="register_service_hint">《服务条款》</string>
    <string name="register_button_register">注册</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_password_re">输入6&#8211;16位新密码</string>
    <string name="register_choise_area">选择小区</string>
    <string name="register_service_title">服务条款</string>
    <string name="register_newpassword_hint">重新输入密码</string>
    <string name="txt_write_comment">写评论</string>
    <string name="txt_button_send">发送</string>
    <string name="title_category">分类</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_move">上移</string>
    <string name="txt_add">添加</string>
    <string name="txt_added">已添加</string>
    <string name="txt_clear_cache">清除缓存</string>
    <string name="txt_about">关于我们</string>
    <string name="txt_language">语言版本</string>
    <string name="txt_push">消息推送</string>
    <string name="txt_logout">退出登录</string>
    <string name="search">搜索</string>
    <string name="searchHistory">搜索历史</string>
    <string name="clearSearchHistory">清除历史记录</string>
    <string name="str_search_hint">搜索</string>
    <string name="str_searchHistory">搜索历史</string>
    <string name="str_clearSearchHistory">清空搜索记录</string>
    <string name="str_search_empty">没有搜索结果~</string>
    <string name="str_empty_history">暂无搜索历史</string>
    <string name="txt_payway_water">水费</string>
    <string name="txt_payway_gas">燃气费</string>
    <string name="txt_payway_electric">电费</string>
    <string name="txt_payway_property">物业费</string>
    <string name="txt_payway_tv">有线电视费</string>
    <string name="txt_payway_cooling">供冷费</string>
    <string name="txt_pay_center">缴费中心</string>
    <string name="button_add">+添加</string>
    <string name="txt_go_pay">去缴费</string>
    <string name="txt_pay_moeny_hint">请输入缴费金额(元)</string>
    <string name="txt_alipay">支付宝</string>
    <string name="txt_wei_pay">微信支付</string>
    <string name="txt_add_house_no_hint">请您输入房屋编号</string>
    <string name="txt_add_house_no_next">下一步</string>
    <string name="txt_add_house_no_desc">说明:\n房屋编号是指您缴费的房屋编码,无房屋编码客服电话:400&#8211;0000进行查询。</string>
    <string name="txt_house_no">房屋编码</string>
    <string name="txt_no_payment_info">暂无缴费信息</string>
    <string name="txt_suggest_phone">请输入您的手机号</string>
    <string name="txt_family_add_person">添加人口</string>
    <string name="txt_family_delete_family">删除此家庭</string>
    <string name="txt_delete">删除</string>
    <string name="txt_edit">编辑</string>
    <string name="txt_family_person">家庭成员</string>
    <string name="txt_add_family_name_hint">请您输入房屋名称</string>
    <string name="txt_add_family_no_hint">请您输入房屋编号</string>
    <string name="txt_family_delete_confirm">确定删除此家庭？</string>
    <string name="txt_dialog_tips">该房屋未审核,是否提交房屋审核?</string>
    <string name="txt_family_auditing">该房屋业主审核中</string>
    <string name="txt_family_audit_error">该房屋业主审核未通过</string>
    <string name="toast_error_permission">您不是该家庭业主,无法进行此操作。</string>
    <string name="txt_add_person_name">真实姓名</string>
    <string name="txt_add_person_header">头像</string>
    <string name="txt_add_person_relative">和户主关系</string>
    <string name="txt_add_person_position">职业</string>
    <string name="txt_add_person_gender">性别</string>
    <string name="txt_add_person_idcard">身份证号</string>
    <string name="txt_add_person_age">年龄</string>
    <string name="txt_add_person_birthday">出生日期</string>
    <string name="txt_add_person_nation">民族</string>
    <string name="txt_add_person_religion">宗教信仰</string>
    <string name="txt_add_person_party">党派</string>
    <string name="txt_add_person_mobile">手机号</string>
    <string name="txt_add_person_address">房屋地址</string>
    <string name="txt_add_person_name_hint">请输入姓名</string>
    <string name="txt_add_person_position_hint">请输入职业</string>
    <string name="txt_add_person_idcard_hint">请输入身份证号</string>
    <string name="txt_add_person_mobile_hint">请输入手机号</string>
    <string name="txt_add_person_address_hint">请输入房屋地址</string>
    <string name="txt_add_person_choise_hint">请选择</string>
    <string name="toast_empty_name">真实姓名不能为空</string>
    <string name="toast_empty_mobile">手机号不能为空</string>
    <string name="toast_empty_idcard">身份证号不能为空</string>
    <string name="toast_error_name">真实姓名不能超过25个字符</string>
    <string name="txt_gender_male">男</string>
    <string name="txt_gender_female">女</string>
    <string name="txt_nickname">昵称</string>
    <string name="txt_bind_mobile">绑定手机号</string>
    <string name="txt_modify_pwd">修改密码</string>
    <string name="txt_write_houseno">填写房屋编号</string>
    <string name="txt_is_owner">是否是业主</string>
    <string name="txt_takephoto">拍照</string>
    <string name="txt_pickphoto">从手机相册选择</string>
    <string name="txt_choise_gender">选择性别</string>
    <string name="txt_nickname_hint">请输入昵称</string>
    <string name="txt_houseno_hint">请输入房屋编号</string>
    <string name="txt_position_hint">请输入职业</string>
    <string name="txt_choise_owner">选择业主</string>
    <string name="txt_choise_relative">选择关系</string>
    <string name="txt_choise_religion">选择宗教信仰</string>
    <string name="txt_choise_party">选择党派</string>
    <string name="txt_chose_nation">选择民族</string>
    <string name="toast_nickname_error">昵称不能超过25个字符</string>
    <string name="toast_modify_success">修改成功</string>
    <string name="txt_ori_pwd_hint">请您输入原密码</string>
    <string name="txt_new_pwd_hint">输入6&#8211;16位新密码</string>
    <string name="toast_empty_new_pwd">请您输入新密码</string>
    <string name="toast_error_new_pwd">请您输入6&#8211;16位新密码</string>
    <string name="txt_map_scope">范围</string>
    <string name="txt_map_scope_1km">1公里范围内</string>
    <string name="txt_map_scope_3km">3公里范围内</string>
    <string name="txt_map_scope_5km">5公里范围内</string>
    <string name="txt_map_scope_10km">10公里范围内</string>
    <string name="txt_map_scope_50km">50公里范围内</string>
    <string name="txt_map_check_status">状态</string>
    <string name="txt_map_check_ing">审核中的</string>
    <string name="txt_map_check_pass">已通过的</string>
    <string name="txt_map_check_nopass">审核未通过</string>
    <string name="txt_map_shop_check_pass">物业认证</string>
    <string name="txt_map_shop_check_ing">认证中...</string>
    <string name="txt_map_shop_check_nopass">未认证</string>
    <string name="txt_map_shop_prefix_address">营业地址：</string>
    <string name="txt_map_tag">标签</string>
    <string name="txt_map_tag_all">全部</string>
    <string name="txt_map_utility">物业设施</string>
    <string name="txt_map_device_status_normal">正常运行</string>
    <string name="txt_map_device_status_unusual">故障中</string>
    <string name="txt_map_device_no_prefix">设施编号:</string>
    <string name="txt_map_house_no">门牌号</string>
    <string name="txt_map_phone">电话</string>
    <string name="txt_map_person_info">资料</string>
    <string name="txt_map_person_reletive">和户主关系：</string>
    <string name="txt_map_person_position">职业&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;：</string>
    <string name="txt_map_person_gender">性别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;：</string>
    <string name="txt_map_person_idcard">身份证号</string>
    <string name="txt_map_person_age">年龄&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;：</string>
    <string name="txt_map_person_birthday">出生日期：</string>
    <string name="txt_map_person_nation">民族&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;：</string>
    <string name="txt_map_person_religion">宗教信仰：</string>
    <string name="txt_map_person_party">党派&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;：</string>
    <string name="txt_map_person_mobile">手机号&#160;&#160;&#160;&#160;：</string>
    <string name="txt_map_person_address">房屋地址：</string>
    <string name="address_name">收货人</string>
    <string name="address_phone">联系方式</string>
    <string name="address_name_hint">请输入收货人姓名</string>
    <string name="address_phone_hint">请输入联系方式</string>
    <string name="address_address_select">请选择</string>
    <string name="address_address">收货地址</string>
    <string name="address_import_detailed_address">请输入详细地址</string>
    <string name="save">保存</string>
</resources>