<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_eeeeee"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/address_name"
            android:textColor="@color/color_gray_333333"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/address_name_hint"
            android:inputType="text"
            android:maxLength="10"
            android:textColor="@color/color_gray_333333"
            android:textColorHint="@color/color_gray_999999"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_gray_e5e5e5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/address_phone"
            android:textColor="@color/color_gray_333333"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/address_phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/color_gray_333333"
            android:textColorHint="@color/color_gray_999999"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_gray_e5e5e5" />

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_address"
            android:textColor="@color/color_gray_333333"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/address_address_select"
            android:textColor="@color/color_gray_333333"
            android:textColorHint="@color/color_gray_999999"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:layout_marginLeft="7dp"
            android:src="@mipmap/d4_li" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_gray_e5e5e5" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@android:color/white"
        android:gravity="top"
        android:hint="@string/address_import_detailed_address"
        android:inputType="text"
        android:maxLength="60"
        android:padding="12dp"
        android:textColor="@color/color_gray_333333"
        android:textColorHint="@color/color_gray_999999"
        android:textSize="14sp" />


    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btn_register"
        style="@style/rectangle_register_button"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/save"
        android:textColor="@color/white" />
</LinearLayout>