<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_eeeeee"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_toolbar" />

    <TextView
        android:id="@+id/tv_clear_cache"
        style="@style/textview_style"
        android:layout_height="@dimen/dp_55"
        android:background="@color/white"
        android:drawableRight="@mipmap/iv_arrow_right"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/txt_clear_cache" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray_eeeeee" />

    <TextView
        android:id="@+id/tv_about"
        style="@style/textview_style"
        android:layout_height="@dimen/dp_55"
        android:background="@color/white"
        android:drawableRight="@mipmap/iv_arrow_right"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/txt_about" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray_eeeeee" />

    <RelativeLayout
        android:id="@+id/layout_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_language"
            style="@style/textview_style"
            android:drawableRight="@mipmap/iv_arrow_right"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/txt_language" />

        <TextView
            style="@style/textview_style"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="待开放"
            android:textColor="@color/color_gray_999999" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray_eeeeee" />

    <RelativeLayout
        android:id="@+id/layout_push"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_push"
            style="@style/textview_style"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/txt_push" />

        <com.alanapi.switchbutton.SwitchButton
            android:id="@+id/switchButton"
            style="@style/sw_SwitchButtonIOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:checked="true"
            android:gravity="center_vertical" />
        <!-- <com.suke.widget.SwitchButton
             android:id="@+id/switchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:sb_checked="true"
             android:visibility="gone"
             android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
             android:layout_centerVertical="true"/>-->
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:background="@color/color_gray_eeeeee" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/textview_style"
        android:layout_height="@dimen/dp_55"
        android:background="@color/white"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/txt_logout"
        android:textColor="@color/logout_txt_color" />
</LinearLayout>