<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_top_bg"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:scaleType="fitXY"
                android:src="@mipmap/b1_logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    style="@style/rectangle_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/login_phone_hint"
                    android:inputType="number"
                    android:paddingLeft="@dimen/dp_10"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/edit_cursor_white"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/rectangle_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/edit_cursor_white" />

                <ImageView
                    android:id="@+id/iv_eyes"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:src="@mipmap/b1_btn1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="@dimen/dp_20">

                <CheckBox
                    android:id="@+id/cb_remember"
                    style="@style/checkbox_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/login_remeber_pwd"
                    android:textColor="@color/login_gray_light_1"
                    android:textSize="@dimen/common_txt_size" />

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/login_forget_pwd"
                    android:textColor="@color/login_gray_light_2"
                    android:textSize="@dimen/common_txt_size" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/rectangle_login_button"
                android:text="@string/login_button_login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="35dp"
                android:text="@string/login_guest"
                android:textColor="@color/login_gray_light_1"
                android:textSize="@dimen/common_title_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp_72"
                android:layout_height="1dp"
                android:background="@color/login_gray_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/login_other"
                android:textColor="@color/gray_line"
                android:textSize="@dimen/common_title_txt_size" />

            <View
                android:layout_width="@dimen/dp_72"
                android:layout_height="1dp"
                android:background="@color/login_gray_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/button_wechat" />

            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="@dimen/dp_10"
                android:src="@drawable/button_qq" />

            <ImageView
                android:id="@+id/iv_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/button_alipay" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/login_no_account"
            android:textColor="@color/login_bottom_txt"
            android:textSize="@dimen/common_title_txt_size" />
    </LinearLayout>
</ScrollView>