<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/global_search_action_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_toolbar_gradient"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_search_content"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toLeftOf="@+id/tv_cancel"
            android:background="@drawable/round_white_btn_bg"
            android:drawableLeft="@mipmap/d15_sousuo"
            android:drawablePadding="@dimen/dp_10"
            android:textCursorDrawable="@drawable/edit_cursor_white"
            android:gravity="start|center_vertical"
            android:hint="@string/str_search_hint"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/common_txt_size" />

        <ImageView
            android:id="@+id/iv_clear_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/et_search_content"
            android:layout_alignRight="@id/et_search_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@mipmap/d15_icon2"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_search_content"
            android:layout_alignBottom="@+id/et_search_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:paddingBottom="14dp"
            android:paddingLeft="15dp"
            android:paddingRight="14dp"
            android:paddingTop="14dp"
            android:text="@string/txt_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/common_txt_size" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/global_search_action_bar_rl">

        <LinearLayout
            android:id="@+id/ll_search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/contentTextView"
                style="@style/textview_style"
                android:layout_width="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:text="@string/str_searchHistory"
                android:textColor="@color/gray_line"
                android:textSize="@dimen/common_txt_size" />

            <ListView
                android:id="@+id/lv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_e5e5e5" />

            <TextView
                android:id="@+id/clear_history_btn"
                style="@style/textview_style"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/str_clearSearchHistory"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/common_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lv_search_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </FrameLayout>


</RelativeLayout>